feat - Makefile, update Readme, JMeter
